<resources>
    <string name="app_name">Pomodoro</string>
    <string name="Titulo">Empieza tu tarea</string>
    <string name="Iniciar">Iniciar</string>
    <string name="Numero"><p>Número de pomodoros</p></string>
    <string name="Minutos"><p>Cantidad de minutos</p></string>
    <string name="Pomodoro">Pomodoro</string>
    <string name="ImagenPomodoro">Imagen referencial de pomodoro</string>
    <string name="BotonComenzar">Boton de comenzar pomodoro</string>
    <string name="BotonCancelar">Boton de cancelar pomodoro</string>
</resources>
