<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="la.hackspace.pomodoro.MenuPomodoro">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/glTitulo"
        android:text="@string/Titulo"
        android:textStyle="bold"
        android:textSize="35sp"
        android:gravity="center_horizontal"
        android:textColor="@color/Verde"/> <!-- Título -->

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/glEspacio"
        app:layout_constraintBottom_toTopOf="@id/glOpciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl25"
        android:text="@string/Numero"/> <!-- Subtítulo número -->

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/glEspacio"
        app:layout_constraintBottom_toTopOf="@id/glOpciones"
        app:layout_constraintStart_toStartOf="@id/gl25"
        app:layout_constraintEnd_toStartOf="@id/gl50"
        android:gravity="center_horizontal"
        android:id="@+id/spPomodoros"
        android:textAlignment="center"> <!-- Número de pomodoros -->

    </Spinner> <!-- Número de pomodoros -->

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/glEspacio"
        app:layout_constraintBottom_toTopOf="@id/glOpciones"
        app:layout_constraintStart_toStartOf="@id/gl50"
        app:layout_constraintEnd_toStartOf="@id/gl75"
        android:text="@string/Minutos"/> <!-- Subtítulo minutos -->

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/glEspacio"
        app:layout_constraintBottom_toTopOf="@id/glOpciones"
        app:layout_constraintStart_toStartOf="@id/gl75"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/spMinutos"
        android:textAlignment="center"> <!-- Minutos -->

    </Spinner> <!-- Minutos por pomodoro -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/glOpciones"
        app:layout_constraintBottom_toTopOf="@id/glPomodoro"
        android:contentDescription="@string/ImagenPomodoro"
        android:src="@drawable/pomodoroimagen"/> <!-- Imagen Pomodoro -->

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/gl33"
        app:layout_constraintEnd_toStartOf="@id/gl66"
        app:layout_constraintTop_toBottomOf="@id/glInicioBoton"
        app:layout_constraintBottom_toTopOf="@id/glFinalBoton"
        android:contentDescription="@string/BotonComenzar"
        android:background="@drawable/botoncomenzar"
        android:onClick="ComenzarCronometro"
        android:id="@+id/ibComenzar"/> <!-- Boton comenzar -->

    <ProgressBar
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/gl33"
        app:layout_constraintEnd_toStartOf="@id/gl66"
        app:layout_constraintTop_toBottomOf="@id/glInicioBoton"
        app:layout_constraintBottom_toTopOf="@id/glInicioBotonCancelar"
        android:visibility="invisible"
        android:id="@+id/pbDuracion"/> <!-- Barra de progreso -->

    <ImageButton

        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/gl33"
        app:layout_constraintEnd_toStartOf="@id/gl66"
        app:layout_constraintTop_toBottomOf="@id/glInicioBotonCancelar"
        app:layout_constraintBottom_toTopOf="@id/glFinalBotonCancelar"
        android:contentDescription="@string/BotonCancelar"
        android:background="@drawable/detener"
        android:onClick="DetenerCronometro"
        android:visibility="gone"
        android:id="@+id/ibDetener"/> <!-- Boton cancelar -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/glPomodoro"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@color/Negro"
        android:textStyle="bold"
        android:id="@+id/tvEstado"/> <!-- Estado -->

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13"
        android:id="@+id/glTitulo"/> <!-- Titulo -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17"
        android:id="@+id/glEspacio"/> <!-- Espacio -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32"
        android:id="@+id/glOpciones"/> <!-- Opciones -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87"
        android:id="@+id/glPomodoro"/> <!-- Pomodoro -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"
        android:id="@+id/glInicioBoton"/> <!-- Inicio boton -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69"
        android:id="@+id/glFinalBoton"/> <!-- Final boton -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64"
        android:id="@+id/glInicioBotonCancelar"/> <!-- Inicio boton -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77"
        android:id="@+id/glFinalBotonCancelar"/> <!-- Final cancelar -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        android:id="@+id/gl25"/> <!-- Vertical 25% -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50"
        android:id="@+id/gl50"/> <!-- Vertical 50% -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        android:id="@+id/gl75"/> <!-- Vertical 75% -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"
        android:id="@+id/gl33"/> <!-- Vertical 33% -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"
        android:id="@+id/gl66"/> <!-- Vertical 66% -->

</android.support.constraint.ConstraintLayout>
